# metabase-mcp-navi

./: .gitignore  README.md  pyproject.toml
docs/: setup-cursor.md
src/metabase_mcp_navi/: __init__.py  __main__.py  client.py  config.py  models.py  server.py
src/metabase_mcp_navi/tools/: __init__.py  cards.py  crud.py  dashboards.py  databases.py  images.py  queries.py
