[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metabase-mcp-navi"
version = "0.1.5"
description = "A Model Context Protocol (MCP) server for Metabase - gives AI assistants direct access to dashboards, cards, and query execution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Manish Balot" }
]
keywords = [
    "mcp",
    "metabase",
    "bi",
    "business-intelligence",
    "ai",
    "llm",
    "cursor",
    "claude",
    "model-context-protocol",
    "dashboards",
    "analytics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/manishbalot10/metabase-mcp-navi"
Documentation = "https://github.com/manishbalot10/metabase-mcp-navi#readme"
Repository = "https://github.com/manishbalot10/metabase-mcp-navi"
Issues = "https://github.com/manishbalot10/metabase-mcp-navi/issues"

[project.scripts]
metabase-mcp-navi = "metabase_mcp_navi.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/metabase_mcp_navi"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]
